tests/lean/struct1.lean.expected.out
struct1.lean:9:14: error: expected Type
struct1.lean:12:20: error: expected structure
struct1.lean:15:27: error: field 'toA' has already been declared
struct1.lean:18:27: error: field 'x' from 'B' has already been declared
struct1.lean:22:1: error: invalid field name '_x', identifiers starting with '_' are reserved to the system
struct1.lean:25:3: error: invalid field name '_y', identifiers starting with '_' are reserved to the system
